Bug 23612 - obj-c++.dg/encode-6.mm fail with the GNU runtime
Summary: obj-c++.dg/encode-6.mm fail with the GNU runtime
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: testsuite (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-29 03:40 UTC by Andrew Pinski
Modified: 2005-10-07 00:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-08-31 15:44:12


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2005-08-29 03:40:50 UTC
obj-c++.dg/encode-6.mm fails with:
/home/pinskia/src/onetest/gcc/gcc/testsuite/obj-c++.dg/encode-6.mm:57: error: invalid use of 
undefined type 'struct objc_ivar'/home/pinskia/src/onetest/gcc/gcc/testsuite/../../libobjc/objc/objc-
api.h:216: error: forward declaration of 'struct objc_ivar'
/home/pinskia/src/onetest/gcc/gcc/testsuite/obj-c++.dg/encode-6.mm:58: error: invalid use of 
undefined type 'struct objc_ivar'
/home/pinskia/src/onetest/gcc/gcc/testsuite/../../libobjc/objc/objc-api.h:216: error: forward 
declaration of 'struct objc_ivar'
/home/pinskia/src/onetest/gcc/gcc/testsuite/obj-c++.dg/encode-6.mm:59: error: cannot increment 
a pointer to incomplete type 'objc_ivar'
/home/pinskia/src/onetest/gcc/gcc/testsuite/obj-c++.dg/encode-6.mm:63: error: cannot convert 
'objc_ivar_list::objc_ivar [1]' to 'objc_ivar*' in assignment
/home/pinskia/src/onetest/gcc/gcc/testsuite/obj-c++.dg/encode-6.mm:70: error: cannot convert 
'objc_ivar_list::objc_ivar [1]' to 'objc_ivar*' in assignment
Comment 1 Andrew Pinski 2005-08-31 15:44:12 UTC
Confirmed based on:
http://gcc.gnu.org/ml/gcc-testresults/2005-08/msg01653.html
Comment 2 GCC Commits 2005-10-06 23:47:12 UTC
Subject: Bug 23612

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	uweigand@gcc.gnu.org	2005-10-06 23:47:09

Modified files:
	libobjc        : ChangeLog 
	libobjc/objc   : objc-api.h 

Log message:
	PR libobjc/23612
	* objc/objc-api.h (struct objc_ivar): Move definition to
	global scope.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libobjc/ChangeLog.diff?cvsroot=gcc&r1=1.173&r2=1.174
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libobjc/objc/objc-api.h.diff?cvsroot=gcc&r1=1.14&r2=1.15

Comment 3 Andrew Pinski 2005-10-07 00:21:54 UTC
Fixed.