re PR testsuite/23612 (obj-c++.dg/encode-6.mm fail with the GNU runtime)

PR libobjc/23612
	* objc/objc-api.h (struct objc_ivar): Move definition to
	global scope.

From-SVN: r105073